# Bindiff-Server

./: .gitignore  Adder.cpp  Adder.h  CMakeLists.txt  README.md  main.cpp
BinDiffPlugin/: __init__.py
BinDiffPlugin/DiffView/: diff_viewer.py  diff_viewer_ui_components.py
BinDiffPlugin/FunctionView/: function_viewer.py  function_viewer_ui_components.py
BinDiffPlugin/Upload/: uploader.py
Client/: client_main.cpp  test_binDiff_1.exe.BinExport
Proto/: bin_diff.proto  bindiff.proto  binexportParser.proto
SHA_256/: sha256Wrapper.cpp
Server/: BinDiffCache.cpp  BinDiffCache.h  BinDiffServer.cpp  BinDiffServer.h  BinExportContent.h  server_main.cpp
src/Client/: BinDiffClient.cpp  BinDiffClient.h  MatchStatistics.h  client_main.cpp  code1.BinExport  code2.BinExport  test_binDiff_1.exe.BinExport
src/Client/Samples/: code1.BinExport  code1.cpp  code2.BinExport  code2.cpp  mnemonics1  mnemonics2  notepad++881.BinExport  notepad++882.BinExport  stress1.BinExport  stress2.BinExport
src/Proto/: bin_diff.proto
src/SHA_256/: sha256Wrapper.h
src/Server/: BinDiffCache.cpp  BinDiffCache.h  BinDiffEngine.cpp  BinDiffEngine.h  BinDiffServer.cpp  BinDiffServer.h  BinExportContent.cpp  BinExportContent.h  MatchingAlgorithm.h  server_main.cpp
src/Server/MatchingAlgorithms/: AddressMatcher.cpp  AddressMatcher.h  BasicStructureMatcher.cpp  BasicStructureMatcher.h  CallDegreeMatcher.cpp  CallDegreeMatcher.h  CallSequenceMatcher.cpp  CallSequenceMatcher.h  ContentSimilarityCalculator.h  FuzzyMatcher.cpp  FuzzyMatcher.h  HashMatcher.cpp  HashMatcher.h  LoopStructureMatcher.cpp  LoopStructureMatcher.h  MDIndexMatcher.cpp  MDIndexMatcher.h  MatchingAlgorithm.h  MnemonicsHashMatcher.cpp  MnemonicsHashMatcher.h  NameMatcher.cpp  NameMatcher.h  NeighbourhoodMatcher.cpp  NeighbourhoodMatcher.h  RelaxedMDIndexMatcher.cpp  RelaxedMDIndexMatcher.h
src/Server/Models/: Function.cpp  Function.h  MnemonicTable.cpp  MnemonicTable.h
test/: CMakeLists.txt  test_upload_get.cpp
